fix: improve isSynchronized method
use eventlatest collection to improve synchronization state computation

(cherry picked from commit 3c365d51543c24948a53c536198afe723a85a287)